--- a/assets/styles.css
+++ b/assets/styles.css
@@ -80,4 +80,16 @@ html, body {
 }
 
 
+.animated {
+    animation-duration: 1s;
+    animation-name: slidein;
+}
 
+@keyframes slidein {
+    from {
+        margin-left: 100%;
+    }
+    to {
+        margin-left: 10%;
+    }
+}
