--- a/assets/styles.css
+++ b/assets/styles.css
@@ -235,6 +235,7 @@ ul.contact-list > li > i {
 /* End. Button "Learn More" */
 
 
+/* Form Send-email. Start */
 form.send-email {
     color: white;
     font-size: 2rem;
@@ -263,3 +264,50 @@ form.send-email button {
     margin-top: 5%;
     cursor: pointer;
 }
+form.send-email.muted{
+    pointer-events: none;
+}
+/* Form Send-email. End */
+
+/* Spinner. Start  */
+.lds-facebook {
+    display: none;
+    position: relative;
+    left: 4rem;
+    top: -0.5rem;
+}
+.lds-facebook div {
+    display: inline-block;
+    position: absolute;
+    left: 8px;
+    width: 16px;
+    background: #000;
+    animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.lds-facebook div:nth-child(1) {
+    left: 8px;
+    animation-delay: -0.24s;
+}
+.lds-facebook div:nth-child(2) {
+    left: 32px;
+    animation-delay: -0.12s;
+}
+.lds-facebook div:nth-child(3) {
+    left: 56px;
+    animation-delay: -0.06s;
+}
+.lds-facebook div:nth-child(4) {
+    left: 80px;
+    animation-delay: unset;
+}
+@keyframes lds-facebook {
+    0% {
+        top: 8px;
+        height: 64px;
+    }
+    50%, 100% {
+        top: 24px;
+        height: 32px;
+    }
+}
+/* Spinner. End  */
