--- a/assets/styles.css
+++ b/assets/styles.css
@@ -72,53 +72,28 @@ textarea {
 .content {
     display: flex;
     flex-direction: column;
+    /*justify-content: center;*/
 }
 
 .content__section {
-    min-width: 100%;
+    /*border: 1px solid gray;*/
+    padding-top: 5vh;
+    min-width: 50vw;
     min-height: 100vh;
 }
 
-@media (max-width: 1200px) {
-    .container{
-        flex-direction: column;
-        height: unset;
-    }
-    .container__photo {
-        min-width: 100vw;
-        min-height: 100vh;
-    }
-    .container__content{
-        min-width: 100vw;
-    }
-}
-
 .section .section__wrap {
-    margin: 15%;
+    /*border: 1px solid gray;*/
     padding: 10%;
-    width: 50vh
+    width: 35vw;
+    min-height: 70vh;
+    /*height: 100%;*/
 }
 
 #s2, #s3 {
     height: 70vh;
 }
 
-@media (max-width: 1200px) {
-    .section .section__wrap {
-        width: 70vh
-    }
-}
-@media (max-width: 1000px) {
-    .section .section__wrap {
-        width: 50vh
-    }
-}
-
-@media (max-width: 700px) {
-    .section .section__wrap {
-        width: 40vh
-    }
-}
 
 .animated {
     animation-duration: 1s;
@@ -130,7 +105,7 @@ textarea {
         margin-left: 100%;
     }
     to {
-        margin-left: 15%;
+        margin-left: 0vh
     }
 }
 
