--- a/assets/media.css
+++ b/assets/media.css
@@ -13,12 +13,15 @@
     .section .section__wrap {
         width: 70vw
     }
+    form.send-email .form-control {
+        width: 90%;
+    }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 400px) {
     #s3 .section__wrap .service-list .service-list__item {
         font-size: 1.5rem;
-        line-height: 2.5em;
+        line-height: 2.2em;
     }
     #s3 .section__wrap .service-list .service-list__item i{
         font-size: 1.5rem;
@@ -26,6 +29,15 @@
         width: 2em;
         height: 2em;
         margin-right: 1em;
+    }
+    .hvr-sweep-to-right{
+        font-size: 1rem;
+    }
+}
+
+@media (max-height: 400px) {
+    #s3{
+        height: 140vh;
     }
 }
 
